--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,3 +41,14 @@
     transform: scale(1.1);
 }
 
+/* package Section  */
+.package-item{
+   box-shadow:0 0 45px rgba(0,0,0,0.08) ; 
+}
+.package-item img{
+    transition: 0.5s;
+}
+.package-item:hover img{
+    transform: scale(1.1);
+}
+
