--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,4 +51,25 @@
 .package-item:hover img{
     transform: scale(1.1);
 }
+.btn{
+    font-family: 'Nuito',sans-serif;
+    font-weight:600 ;
+    transition: 0.5s;
+}
+.btn.btn-primary,.btn.btn-secondary{
+    color: #f5f5f5;
+}
+.btn-square{
+    width:38px;
+    height: 38px;
+}
+
+/* Booking Section  */
+
+.booking {
+    background: linear-gradient(rgba(15, 23, 43, .7), rgba(15, 23, 43, .7)), url(../img/booking.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
