--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@
 
 }
 .first-section{
-    background: linear-gradient(rgba(20,20,31,0.7),rgba(20,20,31,0.7)),url(../img/bg-hero.jpg);
+    background: linear-gradient(rgba(20,20,31,0.7),rgba(20,20,31,0.7)),url(../img/firstSectionBg2.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -67,7 +67,7 @@
 /* Booking Section  */
 
 .booking {
-    background: linear-gradient(rgba(15, 23, 43, .7), rgba(15, 23, 43, .7)), url(../img/booking.jpg);
+    background: linear-gradient(rgba(15, 23, 43, .7), rgba(15, 23, 43, .7)), url(../img/background-booking.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -147,4 +147,65 @@
     background: var(--primary);
     border-color: var(--primary);
 }
+/* footer section */
+.footer .btn .btn-social{
 
+    margin-right: 5px;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--light);
+    font-weight: normal;
+    border: 1px solid #ffffff;
+    border-radius: 35px;
+    transition: 0.3s;
+
+}
+.footer .btn .btn-social:hover{
+    color: var(--primary);
+
+}
+.footer .btn.btn-link{
+    display: block;
+    margin-bottom: 5px;
+    padding: 0;
+    text-align: left;
+    color: #ffffff;
+    font-size: 15px;
+    font-weight: normal;
+    text-transform: capitalize;
+    transition: .3s;
+}
+.footer .btn.btn-link ::before{
+    position: relative;
+    content: "\f105";
+    font-family: "Font Awesome 5 free";
+    font-weight: 900;
+    margin-right: 10px;
+
+    
+}
+.footer .btn.btn-link :hover{
+    letter-spacing: 1px;
+    box-shadow: none;
+
+
+}
+.footer .copyright{
+    padding: 25px 0;
+    font-size: 15px;
+    border-top: 1px solid rgba(255, 255, 255, .1);
+}
+.footer .footer-menu a{
+    margin-right: 15px;
+    padding-right: 15px;
+    border-right: 1px solid rgba(255, 255, 255, .1);
+
+}
+.footer .footer-menu a  last-child{
+    margin-right: 0;
+    padding-right: 0;
+    border-right : none;
+}
