--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,9 @@
-/* Roboto font  */
+/* Roboto font 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap');
+*{
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
+} */
 *{
     font-family: 'Poppins', sans-serif;
     font-family: 'Roboto', sans-serif;
